--- a/src/components/portfolioHighlights.astro
+++ b/src/components/portfolioHighlights.astro
@@ -3,7 +3,7 @@ import '../styles/pages/portfolio.scss'
 
 import SiteGridContent from './siteGridContent.astro'
 
-import getFName from '../../content/getFName.js'
+import getFName from '../../content/getFName'
 
 var highlights = ['TransTrack', 'graphics-for-good', 'SMCAS']
 const ports = import.meta.glob('../../content/work/portfolio/**/*.md', { eager: true })
@@ -11,51 +11,53 @@ const keys = Object.keys(ports)
 const allItems = Object.values(ports) as Item[];
 
 interface Item {
-  file: string;
-  frontmatter: {
-    url: string;
-    name: string;
-  };
-  rawContent: () => string;
+    file: string;
+    frontmatter: {
+        url: string;
+        name: string;
+    };
+    rawContent: () => string;
 }
 
 var items: Item[] = []
 
 highlights.forEach(name => {
-  var res = allItems.filter((item: Item) => getFName(item.file) === name)
-  if (res) {
-    if (res.length > 0) {
-      res.forEach(r => items.push(r))
+    var res = allItems.filter(item => getFName(item.file) === name)
+    if (res) {
+        if (res.length > 0) {
+            res.forEach(r => items.push(r))
+        }
     }
-  }
 });
 ---
 <SiteGridContent classItems="portfolio wrap">
-  {
-    items.map((item, i2) => {
-      var target = '_blank'
-      var url = item.frontmatter.url
-      if (url.startsWith('//')) url = `https:${url}`
+    {
+        items.map((item, i2) => {
+            var target = '_blank'
+            var url = item.frontmatter.url
+            if (url.startsWith('//')) url = `https:${url}`
 
-      var domain = url
-      if (domain.includes('://')) {
-        domain = domain.split('://')[1]
-        if (domain.includes('/')) domain = domain.split('/')[0]
-        if (domain.startsWith('www.')) domain = domain.slice('www.'.length)
-        domain = `https://${domain}`
-      }
-      
-      if (!url.includes(':') || domain === String(Astro.site)) target = 'self'
+            var domain = url
+            if (domain.includes('://')) {
+                domain = domain.split('://')[1]
+                if (domain.includes('/')) domain = domain.split('/')[0]
+                if (domain.startsWith('www.')) domain = domain.slice('www.'.length)
+                domain = `https://${domain}`
+            }
+            
+            if (!url.includes(':') || domain === String(Astro.site)) target = 'self'
 
-      var imageSize = 512
-      var image_url = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
-      return (<a href={url} target={target} class="item">
-        <img src={image_url} alt="" class="item__img" style={`--placeholder: url('${image_url}&image_quality=${50}')`} />
-        <div class="item__info">
-          <h3 class="item__title">{item.frontmatter.name}</h3>
-          <p class="item__content">{item.rawContent()}</p>
-        </div>
-      </a>)
-    })
-  }
+            var imageSize = 512
+            var image_url = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
+            return (
+                <a href={url} target={target} class="item">
+                    <img src={image_url} alt="" class="item__img" style={`--placeholder: url('${image_url}&image_quality=${50}')`} />
+                    <div class="item__info">
+                        <h3 class="item__title">{item.frontmatter.name}</h3>
+                        <p class="item__content">{item.rawContent()}</p>
+                    </div>
+                </a>
+            )
+        })
+    }
 </SiteGridContent>
