--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,12 +3,12 @@ import '../styles/pages/[about, contact].scss'
 
 import Layout from '../layouts/Layout.astro'
 
-import age from '../../content/getAge.js'
+import age from '../../content/getAge'
 
 const aboutFile = await import('../../content/aboutContent.md')
 var aboutContent = aboutFile.compiledContent().replaceAll('{ age }', age.toString())
 
 ---
 <Layout title="About">
-  <div class="about" set:html={aboutContent} />
+    <div class="about" set:html={aboutContent} />
 </Layout>
