--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -14,7 +14,7 @@ export function getStaticPaths() {
 
 const { id } = Astro.params;
 
-import authors from '../../../content/blog/authors.js'
+import authors from '../../../content/blog/authors'
 
 var posts = await Astro.glob('../../../content/blog/posts/**/*.md')
 var post = posts.find(post => post.file.includes(id || ''))
