--- a/src/styles/components/largeFrame.scss
+++ b/src/styles/components/largeFrame.scss
@@ -82,7 +82,9 @@ $t-time: 0.5s;
             margin-block: 0;
             white-space: nowrap;
             overflow-x: hidden;
-            overflow-x: clip;
+            @supports( overflow-x: clip) {
+                overflow-x: clip;
+            }
             text-overflow: ellipsis;
         }
     }
