--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -160,6 +160,11 @@ img {
     text-decoration: none;
   
     cursor: pointer;
+
+    transition: 
+        color 0.3s ease-out,
+        background-color 0.3s ease-out;
+
     
     &:not(.primary) {
         background-color: transparent;
