--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -17,7 +17,7 @@ const { id } = Astro.params;
 import authors from '../../../content/blog/authors'
 
 var posts = await Astro.glob('../../../content/blog/posts/**/*.md')
-var post = posts.find(post => post.file.includes(id || ''))
+var post = posts.find(post => !post.file.startsWith('_') && post.file.includes(id || ''))
 
 if (post) {
     var authorUsername = post.frontmatter.author
